# learning-agent

./: .gitignore  PLAN.md  README.md  learning-agent.spec  main.py  pyproject.toml
configs/llm_api/arcee-ai/: trinity-large-thinking.json
configs/llm_api/bytedance/: seed-oss-36b-instruct.json
configs/llm_api/deepseek/: deepseek-v4-flash.json
configs/llm_api/gemma/: gemma-2-2b-it.json  gemma-3-27b-it.json  gemma-3-27b.json  gemma-3n-e2b-it.json  gemma-3n-e4b-it.json  gemma-4-31b-it.json
configs/llm_api/gpt/: gpt-4.1-mini.json  gpt-4.1.json  gpt-5.4.json
configs/llm_api/llama/: llama-3.3-70b-instruct.json  llama-4-maverick-17b-128e-instruct.json
core/: app_settings.py  audio_recorder.py  browser_service.py  clipboard.py  config.py  free_llm_manager.py  hotkey.py  orchestrator.py  runtime_paths.py  screen_ocr.py  stt_service.py  tts_service.py  voice_catalog.py  voice_services.py  wake_word_service.py
llm/: __init__.py  base.py  openai_provider.py  openrouter_provider.py
prompts/: __init__.py  templates.py
scripts/: build_exe.ps1  test_stt_models.py
session/: __init__.py  manager.py
tests/: test_app_settings.py  test_browser_service.py  test_chat_widget.py  test_clipboard.py  test_core_config.py  test_hotkey_listener.py  test_llm_catalog.py  test_main.py  test_main_window.py  test_openai_provider.py  test_openrouter_provider.py  test_orchestrator.py  test_prompts.py  test_runtime_paths.py  test_screen_ocr.py  test_session_manager.py  test_settings_popup.py  test_stt_service.py  test_tts_service.py  test_voice_services.py  test_wake_word_service.py
ui/: __init__.py  chat_widget.py  input_box.py  main_window.py  prompt_input_dialog.py  settings_popup.py
(+13 files in other folders)
