[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-agent"
version = "0.1.0"
description = "Windows AI learning assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "httpx>=0.27",
    "mss>=10.1",
    "sounddevice>=0.5.0",
    "pynput>=1.7",
    "pyperclip>=1.9",
    "python-dotenv>=1.0",
    "huggingface-hub>=1.0",
    "torch>=2.7.0",
    "transformers>=4.48.0",
    "pyttsx3>=2.98",
    "faster-whisper>=1.2.1",
    "chatterbox-tts>=0.1.7",
    "piper-tts>=1.4.2",
    "sherpa-onnx>=1.12.38",
    "vieneu>=2.4.3",
    "neucodec>=0.0.5",
    "torchao>=0.17.0",
    "rapidocr-onnxruntime>=1.2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "llm*", "prompts*", "session*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
